# la-inst

./: .gitignore  Cargo.toml  LATX.md  LBT.md  NOTES.md  README.md  asm.cpp  check.py  extract_latx_opc.py  extract_latx_opc.sh  extract_opc.py  extract_opc.sh  main.cpp  mismatch.txt  test.cpp  x86settag.txt
cpucfg/: 3a6000.txt  3c5000.txt  dump.c
logs/: 00008020.txt  01008400.txt  7144b630.txt  71454e4c.txt  714575ac.txt  729d2bba.txt  75451c10.txt  75454612.txt  75457e9b.txt  769bbc54.txt  769d2a8d.txt
src/: lbt.rs  lib.rs  main.rs  opcode.rs  ptrace.rs
