[package]
name = "la-inst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
indicatif = { version = "0.17.7", features = ["rayon"] }
libc = "0.2.148"
rand = "0.8.5"
rayon = "1.8.0"
tempfile = "3.8.0"
